fdo#61343 fix DOCX import of OLE object after groupshape

Change-Id: I88d5e49cc3fb915d25c1b2576cdda1fffc9e2f23